Updated PlayerController, TeamController, Team/Add, Team/Edit, and the Home/Index.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,10 +1,4 @@
-﻿@model List<Team>
-@{
-    ViewData["Title"] = "Teams";
+﻿@{
+    ViewData["Title"] = "Home Page";
 }
-
-<div class="mb-2">
-    <a asp-controller ="Team" asp-action="Add"> Add New Team</a>
-</div>
-
 
