--- a/Views/Team/Edit.cshtml
+++ b/Views/Team/Edit.cshtml
@@ -1,5 +1,48 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model Team
 @{
+    string title = ViewBag.Action + "Team";
+    ViewData["Title"] = "title";
 }
+
+<h2>@ViewBag.Title</h2>
+
+<form asp-action="Edit" method="post">
+
+    <div asp-validation-summary="All" class="text-danger"></div>
+
+    <div class="mb-3">
+        <label asp-for="TeamName" class="form-label">Team Name</label>
+        <input asp-for="TeamName" class="form-control" />
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="Location" class="form-label">Location</label>
+        <input asp-for="Location" class="form-control" />
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="LeagueType" class="form-label">League Type</label>
+        <input asp-for="LeagueType" class="form-control" />
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="Category" class="form-label">Category</label>
+        <input asp-for="Category" class="form-control" />
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="Gender" class="form-label">Gender</label>
+        <input asp-for="Gender" class="form-control" />
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="TeamDescription" class="form-label">Team Description</label>
+        <input asp-for="TeamDescription" class="form-control" />
+    </div>
+
+    <input type="hidden" asp-for="Id" />
+    <button type="submit" class="btn btn-primary">Save</button>
+    <a asp-controller="Team" asp-action="Index" class="btn btn-primary">Cancel</a>
+
+   
+</form>
