--- a/Views/Team/Index.cshtml
+++ b/Views/Team/Index.cshtml
@@ -1,5 +1,25 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
 @{
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+@model IEnumerable<VolleyballFinal.Models.Team>
+
+<div class="sidebar">
+    <!-- Sidebar content (Filters, Favorites, etc.) -->
+</div>
+
+<div class="main-content">
+    <div class="teams-container">
+        @foreach (var team in Model)
+        {
+            <a asp-controller="Team" asp-action="Details" asp-route-id="@team.Id">
+                <div class="team-item">
+                    <h3>@team.TeamName</h3>
+                    <img class="team-flag" src="@Url.Content($"~/images/teams/{team.TeamName}.jpg")" alt="Flag of @team.TeamName" title="@team.TeamName, @team.Location, @team.LeagueType" />
+                </div>
+            </a>
+        }
+    </div>
+</div>
+
+<div style="clear:both;"></div>
