--- a/Views/Team/Add.cshtml
+++ b/Views/Team/Add.cshtml
@@ -1,10 +1,9 @@
-﻿
-
 //VERIFY THIS IS WHAT NEEDS TO BE IN THE INDEX OR IF IT NEEDS TO BE IN TEAM/ADD OR TEAM/INDEX
 
-@model List<Team>
+@using VolleyballFinal.Models
+@model Team
 @{
-    ViewData["Title"] = "Teams";
+    ViewData["Title"] = "Add Team";
 }
 
 <div class="mb-2">
@@ -19,28 +18,6 @@
             <th>League Type:</th>
             <th>Category:</th>
             <th>Gender:</th>
-            <th>Team Description:</th>
         </tr>
     </thead>
-
-    <tbody>
-        @foreach (var team in Model)
-        {
-            <tr>
-                <td>@team.TeamName</td>
-                <td>@team.Location</td>
-                <td>@team.LeagueType</td>
-                <td>@team.Category</td>
-                <td>@team.Gender</td>
-                <td>@team.TeamDescription</td>
-
-                <td>
-                    <a asp-controller="Team" asp-action="Edit" asp-route-id="@Team.Id">Edit</a>
-                    <a asp-controller="Team" asp-action="Delete" asp-route-id="@Team.Id">Delete</a>
-
-                </td>
-            </tr>
-        }
-
-    </tbody>
 </table>
