Updated views and started on the register/login

--- a/Views/Player/Details.cshtml
+++ b/Views/Player/Details.cshtml
@@ -1,3 +1,7 @@
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
 @model VolleyballFinal.Models.Player
 
 <h2>Player Details</h2>
@@ -33,3 +37,4 @@
         <a asp-controller="Team" asp-action="Index">Return to Team Home Page</a>
     </div>
 </div>
+
