--- a/Views/Team/Delete.cshtml
+++ b/Views/Team/Delete.cshtml
@@ -1,5 +1,17 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using VolleyballFinal.Models
+@model Team
 @{
+    ViewData["Title"] = "Delete Team";
 }
+
+<h2>Confirm Deletion</h2>
+
+
+<form asp-action="Delete" method="post">
+
+    <input type="hidden" asp-for="Id" />
+
+    <button type="submit" class="btn btn-primary">Delete</button>
+    <a asp-controller="Team" asp-action="Index"
+       class="btn btn-primary">Cancel</a>
+</form>
