--- a/Views/Player/Add.cshtml
+++ b/Views/Player/Add.cshtml
@@ -1,5 +1,22 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using VolleyballFinal.Models
+@model Player
 @{
+    ViewData["Title"] = "Add a Player";
 }
+
+<div class="mb-2">
+    <a asp-controller="Player" asp-action="Add"> Add New Player</a>
+</div>
+
+<table class="mb-2">
+    <thead>
+        <tr>
+            <th>Player Name:</th>
+            <th>Number:</th>
+            <th>Team Name:</th>
+            <th>Position:</th>
+            <th>Age:</th>
+            <th>Height:</th>
+        </tr>
+    </thead>
+</table>
