--- a/Views/Player/Delete.cshtml
+++ b/Views/Player/Delete.cshtml
@@ -1,5 +1,16 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using VolleyballFinal.Models
+@model Player
 @{
+    ViewData["Title"] = "Delete Player";
 }
+
+<h2>Confirm Deletion</h2>
+
+<form asp-action="Delete" method="post">
+
+    <input type="hidden" asp-for="PlayerId" />
+
+    <button type="submit" class="btn btn-primary">Delete</button>
+    <a asp-controller="Player" asp-action="Details"
+       class="btn btn-primary">Cancel</a>
+</form>
