--- a/Views/Player/Edit.cshtml
+++ b/Views/Player/Edit.cshtml
@@ -1,5 +1,47 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using VolleyballFinal.Models
+@model Team
 @{
+    ViewData["Title"] = "Edit Team";
 }
+<h2>@ViewBag.Title</h2>
+
+<form asp-action="Edit" method="post">
+
+    <div asp-validation-summary="All" class="text-danger"></div>
+
+    <div class="mb-3">
+        <label asp-for="PlayerName" class="form-label">Player Name</label>
+        <input asp-for="PlayerName" class="form-control" />
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="Number" class="form-label">Number</label>
+        <input asp-for="Number" class="form-control" />
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="TeamName" class="form-label">Team Name</label>
+        <input asp-for="TeamName" class="form-control" />
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="Position" class="form-label">Position</label>
+        <input asp-for="Position" class="form-control" />
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="Age" class="form-label">Age</label>
+        <input asp-for="Age" class="form-control" />
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="Height" class="form-label">Height</label>
+        <input asp-for="Height" class="form-control" />
+    </div>
+
+    <input type="hidden" asp-for="Id" />
+    <button type="submit" class="btn btn-primary">Save</button>
+    <a asp-controller="Player" asp-action="Details" class="btn btn-primary">Cancel</a>
+
+
+</form>
