Fixed views and links

--- a/Views/Player/Details.cshtml
+++ b/Views/Player/Details.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-@model VolleyballFinal.Models.Player
+﻿@model VolleyballFinal.Models.Player
 
 <h2>Player Details</h2>
 
