--- a/Views/Player/Edit.cshtml
+++ b/Views/Player/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@using VolleyballFinal.Models
-@model Team
+@model Player
 @{
     ViewData["Title"] = "Edit Team";
 }
@@ -39,7 +39,7 @@
         <input asp-for="Height" class="form-control" />
     </div>
 
-    <input type="hidden" asp-for="Id" />
+    <input type="hidden" asp-for="PlayerId" />
     <button type="submit" class="btn btn-primary">Save</button>
     <a asp-controller="Player" asp-action="Details" class="btn btn-primary">Cancel</a>
 
