--- a/Views/Player/Edit.cshtml
+++ b/Views/Player/Edit.cshtml
@@ -1,7 +1,7 @@
-﻿@using VolleyballFinal.Models
+@using VolleyballFinal.Models
 @model Player
 @{
-    ViewData["Title"] = "Edit Team";
+    ViewData["Title"] = "Edit Player";
 }
 <h2>@ViewBag.Title</h2>
 
@@ -12,36 +12,41 @@
     <div class="mb-3">
         <label asp-for="PlayerName" class="form-label">Player Name</label>
         <input asp-for="PlayerName" class="form-control" />
+        <span asp-validation-for="PlayerName" class="text-danger"></span>
     </div>
 
     <div class="mb-3">
-        <label asp-for="Number" class="form-label">Number</label>
+        <label asp-for="Number" class="form-label">Player Number</label>
         <input asp-for="Number" class="form-control" />
+        <span asp-validation-for="Number" class="text-danger"></span>
     </div>
 
     <div class="mb-3">
         <label asp-for="TeamName" class="form-label">Team Name</label>
         <input asp-for="TeamName" class="form-control" />
+        <span asp-validation-for="TeamName" class="text-danger"></span>
     </div>
 
     <div class="mb-3">
-        <label asp-for="Position" class="form-label">Position</label>
+        <label asp-for="Position" class="form-label">Player Position</label>
         <input asp-for="Position" class="form-control" />
+        <span asp-validation-for="Position" class="text-danger"></span>
     </div>
 
     <div class="mb-3">
-        <label asp-for="Age" class="form-label">Age</label>
+        <label asp-for="Age" class="form-label">Player Age</label>
         <input asp-for="Age" class="form-control" />
+        <span asp-validation-for="Age" class="text-danger"></span>
     </div>
 
     <div class="mb-3">
-        <label asp-for="Height" class="form-label">Height</label>
+        <label asp-for="Height" class="form-label">Player Height</label>
         <input asp-for="Height" class="form-control" />
+        <span asp-validation-for="Height" class="text-danger"></span>
     </div>
 
     <input type="hidden" asp-for="PlayerId" />
     <button type="submit" class="btn btn-primary">Save</button>
-    <a asp-controller="Player" asp-action="Details" class="btn btn-primary">Cancel</a>
-
+    <a asp-controller="Player" asp-action="Index" class="btn btn-primary">Cancel</a>
 
 </form>
