--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -27,10 +27,10 @@
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Team" asp-action="Details">Teams</a>
+                            <a class="nav-link text-dark" asp-controller="Team" asp-action="Index">Teams</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Player" asp-action="Details">Players</a>
+                            <a class="nav-link text-dark" asp-controller="Player" asp-action="Index">Players</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
@@ -51,11 +51,11 @@
                             var action = ViewContext.RouteData.Values["action"]?.ToString();
 
                             <li class="nav-item @Nav.Active("Register", action)">
-                                <a asp-action="Register" asp-contoller="Account" asp-area="" class="nav-link">
+                                <a asp-action="Register" asp-controller="Account" class="nav-link">
                                     <span class="fas fa-edit"></span>&nbsp;Register</a>
                             </li>
                             <li class="nav-item">
-                                <a asp-action="Login" asp-controller="Account" asp-area="" class="btn btn-outline-light">Log In</a>
+                                <a asp-action="LogIn" asp-controller="Account" class="btn btn-outline-light">Log In</a>
                             </li>
                         }
 
