Updated AccountController, LogIn.cshtml

--- a/Views/Account/LogIn.cshtml
+++ b/Views/Account/LogIn.cshtml
@@ -16,9 +16,8 @@
             <span asp-validation-for="Username" class="text-danger"></span>
         </div>
     </div>
-
     <div class="row mb-2">
-        <label class="col-form-label coll-md-2">Password:</label>
+        <label class="col-form-label col-md-2">Password:</label>
         <div class="col-md-4">
             <input type="password" asp-for="Password" class="form-control" />
         </div>
@@ -29,7 +28,7 @@
     <div class="row mb-2">
         <div class="col offset-md-2">
             <input type="checkbox" title="Remember Me" asp-for="RememberMe" class="form-check-inline" />
-            <label>Remember me</label>
+            <label>Remember Me</label>
         </div>
     </div>
 
