--- a/Views/Statistic/Add.cshtml
+++ b/Views/Statistic/Add.cshtml
@@ -10,8 +10,8 @@
 
     <div asp-validation-summary="All" class="text-danger"></div>
 
-    <div class="mb-3">
-        <label asp-for="PlayerName" class="form-label">Player Name</label>
+    <div>
+        <label asp-for="PlayerName"></label>
         <input asp-for="PlayerName" class="form-control" />
         <span asp-validation-for="PlayerName" class="text-danger"></span>
     </div>
