Updated home page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,17 @@
 
 <h1 class="text-center p-2">Volleyball Final</h1>
 
+<h2>Welcome to Volleyball Teams & Statistics. </h2>
+
+<h3>This website was built as a project for an ASP.NET MVC Core course. </h3><br />
+
+<p>
+    Please follow the links above to view all the volleyball teams, players and their statistics. Click on the team logos to see the players on that team. Click on a player’s photo to view their player statistics.
+    <br />
+    You can register and log in to gain access to add, edit, and delete a team or player; or to update a player’s statistics.
+</p>
+
+
+
 
 
