Updated index.cshtml and json file

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,7 +13,8 @@
     <br />
     You can register and log in to gain access to add, edit, and delete a team or player; or to update a player’s statistics.
 </p>
-
+<br />
+<p>Developed and Designed by: River Deters and Stephanie Sink</p>
 
 
 
